@@ -26,6 +26,7 @@
             process.memory() reports `stackFree` which allows us to easily check if we're ok for recursion
             E.HSBtoRGB can now be called with `E.HSBtoRGB(h,s,b,16)` to return a 16 bit value suitable for Bangle.js/etc
             Bangle.js2: Flip LCD SPI bit order so operations in Espruino can be faster (45% faster fillRect)
+            Bangle.js2: Use 8x3bpp block fill with masking (now at least 6x faster than 2v15)
 
      2v15 : Fix issue where `E.toJS("\0"+"0") == '"\00"'` which is just `"\0"`
             Fix issue accessing `arguments` after/inside 'let/const' keyword (fix #2224)
